# churn-prediction-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt
data/: churn_data.csv  generate_data.py
models/: churn_model.pkl  feature_names.pkl  model_metadata.json
src/: app.py  train.py  train_oop.py
